feat: support batch requests (#499) - EBSIINT-10926
Merge in EBSI/core-services from fix/EBSIINT-10926 to main
