# apis/ledger-v4/src/modules/besu/dto/besu.dto.ts
@@ -1,17 +1,0 @@
-import { Equals, IsArray, IsOptional, IsString } from "class-validator";
-
-export class BesuDto {
-  @Equals("2.0")
-  jsonrpc!: "2.0";
-
-  @IsString()
-  method!: string;
-
-  @IsArray()
-  params!: unknown[];
-
-  @IsOptional()
-  id?: number | string;
-}
-
-export default { BesuDto };
